Fix the lucky draw project from the failed compiling